updated files with errors that neeeded to be replaced

--- a/index.html
+++ b/index.html
@@ -9,11 +9,41 @@
             <div class="container">
                 <a href="index.html" id= "logo"> Zhane Warner Duncan</a>
                 <nav>
-                    <a href="index.html">About</a>
-                    <a href="portfolio.html">Portfolio</a>
+                    <a href="About.html">About</a>
+                    <a href="index.html">Portfolio</a>
                     <a href="contact.html">Contact</a>
-                </nav>          
+                </nav>    
             </div>
         </header>
+        <br>
+
+        <!-- <div id="portfolio">
+            <p>Portfolio</p>
+        </div> -->
+        <div class="pagecontainer">
+            <div class="wrapper">
+            
+        
+                <div id="Portfolio">
+                    <h1>Portfolio</h1>
+                </div>
+                <div id="image1">
+                    <img src="https://images.unsplash.com/photo-1518791841217-8f162f1e1131?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&w=1000&q=80" width="200" height="200"> 
+                </div>
+
+                <div id="image2">
+                    <img src="https://images.unsplash.com/photo-1518791841217-8f162f1e1131?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&w=1000&q=80" width="200" height="200"> 
+                </div>
+
+                <div id="image3">
+                    <img src="https://images.unsplash.com/photo-1518791841217-8f162f1e1131?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&w=1000&q=80" width="200" height="200"> 
+                </div>
+
+            </div>
+
+            <div id="footer">
+                <h4>Copyright &copy;</h4>
+            </div>
+        </div>
     </body>
 </html>
