--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
     <head>
         <title> My Portfolio </title>
         <link rel="stylesheet" type="text/css" href="style.css">
+        <a href="https://zwarnerdun.github.io/unit-4-game/."> </a>
     </head>
     <body>
         <header id="headerNav">
@@ -16,10 +17,7 @@
             </div>
         </header>
         <br>
-
-        <!-- <div id="portfolio">
-            <p>Portfolio</p>
-        </div> -->
+        
         <div class="pagecontainer">
             <div class="wrapper">
             
@@ -37,6 +35,11 @@
 
                 <div id="image3">
                     <img src="https://images.unsplash.com/photo-1518791841217-8f162f1e1131?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&w=1000&q=80" width="200" height="200"> 
+                </div>
+
+
+                <div id="link">
+                    <a href="https://zwarnerdun.github.io/unit-4-game/."> unit-4-game</a>
                 </div>
 
             </div>
