--- a/index.html
+++ b/index.html
@@ -40,6 +40,8 @@
 
                 <div id="link">
                     <a href="https://zwarnerdun.github.io/unit-4-game/."> unit-4-game</a>
+                    <br/>
+                    <a href="https://zwarnerdun.github.io/TriviaGame/">Fashion Trivia</a>
                 </div>
 
             </div>
