added GifTastic website

--- a/index.html
+++ b/index.html
@@ -42,6 +42,8 @@
                     <a href="https://zwarnerdun.github.io/unit-4-game/."> unit-4-game</a>
                     <br/>
                     <a href="https://zwarnerdun.github.io/TriviaGame/">Fashion Trivia</a>
+                    <br/>
+                    <a href="https://zwarnerdun.github.io/GifTastic/">Giphy Time</a>
                 </div>
 
             </div>
